--- a/Template/welcome.html
+++ b/Template/welcome.html
@@ -1,11 +1,36 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <title>E-commerce</title>
 </head>
+
 <body>
-    <h1>new website</h1>
+    <div class="nav">
+        <div class="leftNav">
+            <h1 class="logo"> company <span id="logoName">name</span></h1>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href=""> Contacts</a></li>
+            <li><a href="">About</a></li>
+        </ul>
+        </div>
+        <div class="rightNav">
+            <ul>
+                <li>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </li>
+                <li>
+                    <i class="fa-duotone fa-user"></i>
+
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </body>
+
 </html>
