--- a/Template/welcome.html
+++ b/Template/welcome.html
@@ -4,33 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/welcome.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/22f87b3e64.js" crossorigin="anonymous"></script>
     <title>E-commerce</title>
 </head>
 
 <body>
-    <div class="nav">
+    <div class="navigation">
         <div class="leftNav">
             <h1 class="logo"> company <span id="logoName">name</span></h1>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href=""> Contacts</a></li>
-            <li><a href="">About</a></li>
-        </ul>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#"> Contacts</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+            
         </div>
         <div class="rightNav">
-            <ul>
-                <li>
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </li>
-                <li>
-                    <i class="fa-duotone fa-user"></i>
+           <div class="icons">
+            <i class="fa-solid fa-magnifying-glass"></i>
 
-                </li>
-            </ul>
+           </div>
+           <div class="icons">
+
+            <i class="fa-regular fa-user"></i>
+
+           </div>
         </div>
     </div>
+   
 
 </body>
 
