welcome page updated

--- a/Template/welcome.html
+++ b/Template/welcome.html
@@ -11,28 +11,51 @@
 </head>
 
 <body>
-    <div class="nav">
+
+    <div class="navigation">
         <div class="leftNav">
             <h1 class="logo"> company <span id="logoName">name</span></h1>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href=""> Contacts</a></li>
-            <li><a href="">About</a></li>
-        </ul>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#"> Contacts</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+            
         </div>
         <div class="rightNav">
-            <ul>
-                <li>
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </li>
-                <li>
-                    <i class="fa-duotone fa-user"></i>
+           <div class="icons">
+            <i class="fa-solid fa-magnifying-glass"></i>
 
-                </li>
-            </ul>
+           </div>
+           <div class="icons">
+
+            <i class="fa-regular fa-user"></i>
+
+           </div>
         </div>
     </div>
 
+    <div class="slide">
+ <div class="slideshow-container">
+            <div class="mySlide fade">
+                <img id="img" src="../Assets/imgOne.png" style="width: 100%;">
+            </div>
+
+            <div class="mySlide fade">
+                <img id="img" src="../Assets/imgTwo.png" style="width: 100%;">
+            </div>
+
+            <div class="mySlide fade">
+                <img id="img" src="../Assets/imgThree.png" style="width: 100%;">
+            </div>
+            <div style="text-align: center;">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+    </div>
+
+    <script src="../JS/welcome.js"></script>
 </body>
 
 </html>
