--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -61,14 +61,22 @@ ul li a:hover::after{
     transition: 0.7s;
 }
 
-.mySlide{
-    display: none;
+.slides{
+    margin-top: 100px;
+    padding: 0 100px;
+    display: flex;
+    justify-content: space-around;
+
 }
 
 .slideshow-container{
-    width: 500px;
+    width: 300px;
     position: relative;
-    margin: auto;
+
+}
+
+.mySlide{
+    display: none;
 }
 
 #img{
@@ -81,20 +89,20 @@ ul li a:hover::after{
     margin: 0 2px;
     border-radius: 50%;
     display: inline-block;
-    background-color:grey;
-    transition: background-color 0.6s ease;
+    background-color:white;
+    transition: background-color 0.6 ease-out;
 }
 
 .active{
-    background-color: #717171;
+    background-color: white;
 }
 
 .fade{
     animation-name: fade;
-    animation-duration: 1.5s;
+    animation-duration: 2s;
 }
 
 @keyframes fade{
-    from {opacity: .4}
+    from {opacity: .1}
     to {opacity: 1}
 }
