--- a/Template/welcome.html
+++ b/Template/welcome.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/welcome.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/22f87b3e64.js" crossorigin="anonymous"></script>
     <title>E-commerce</title>
 </head>
@@ -20,23 +21,36 @@
                 <li><a href="#"> Contacts</a></li>
                 <li><a href="#">About</a></li>
             </ul>
-            
+
         </div>
         <div class="rightNav">
-           <div class="icons">
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <div class="icons">
+                <i class="fa-solid fa-magnifying-glass"></i>
 
-           </div>
-           <div class="icons">
+            </div>
+            <div class="icons">
 
-            <i class="fa-regular fa-user"></i>
+                <i class="fa-regular fa-user"></i>
 
-           </div>
+            </div>
         </div>
     </div>
 
-    <div class="slide">
- <div class="slideshow-container">
+    <div class="slides">
+        <div class="slide-content">
+            <h6 class="slide-head6">
+                Welcome, to i_water
+            </h6>
+            <h1 class="slide-head1">
+                WATER SERVICES<br> NEAR YOU
+            </h1>
+            <p class="slide-des">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Velit unde nam optio nisi sequi quo ullam minima non voluptatibus magnam ea dolorum <br> doloremque nostrum laboriosam, eos rem quisquam suscipit animi?
+            </p>
+
+            <button class="btn btn-primary" >shop now</button>
+        </div>
+        <div class="slideshow-container">
             <div class="mySlide fade">
                 <img id="img" src="../Assets/imgOne.png" style="width: 100%;">
             </div>
@@ -53,7 +67,10 @@
                 <span class="dot"></span>
                 <span class="dot"></span>
             </div>
+        </div>
     </div>
+
+
 
     <script src="../JS/welcome.js"></script>
 </body>
