--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -106,3 +106,13 @@ ul li a:hover::after{
     from {opacity: .1}
     to {opacity: 1}
 }
+
+.footer{
+    padding-top: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+#icons{
+    display: flex;
+    justify-content: space-around;
+}
