--- a/Template/welcome.html
+++ b/Template/welcome.html
@@ -12,65 +12,65 @@
 </head>
 
 <body>
-
-    <div class="navigation">
-        <div class="leftNav">
-            <h1 class="logo"> company <span id="logoName">name</span></h1>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#"> Contacts</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-
-        </div>
-        <div class="rightNav">
-            <div class="icons">
-                <i class="fa-solid fa-magnifying-glass"></i>
-
+    <div class="theHeader">
+        <div class="navigation">
+            <div class="leftNav">
+                <h1 class="logo"> company <span id="logoName">name</span></h1>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="#"> Contacts</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+    
             </div>
-            <div class="icons">
-
-                <i class="fa-regular fa-user"></i>
-
+            <div class="rightNav">
+                <div class="icons">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+    
+                </div>
+                <div class="icons">
+    
+                    <i class="fa-regular fa-user"></i>
+    
+                </div>
+            </div>
+        </div>
+    
+        <div class="slides">
+            <div class="slide-content">
+                <h6 class="slide-head6">
+                    Welcome, to i_water
+                </h6>
+                <h1 class="slide-head1">
+                    WATER SERVICES<br> NEAR YOU
+                </h1>
+                <p class="slide-des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Velit unde nam optio nisi sequi quo ullam minima non voluptatibus magnam ea dolorum <br> doloremque nostrum laboriosam, eos rem quisquam suscipit animi?
+                </p>
+    
+                <button class="btn btn-primary" >shop now</button>
+            </div>
+            <div class="slideshow-container">
+                <div class="mySlide fade">
+                    <img id="img" src="../Assets/imgOne.png" style="width: 100%;">
+                </div>
+    
+                <div class="mySlide fade">
+                    <img id="img" src="../Assets/imgTwo.png" style="width: 100%;">
+                </div>
+    
+                <div class="mySlide fade">
+                    <img id="img" src="../Assets/imgThree.png" style="width: 100%;">
+                </div>
+                <div style="text-align: center;">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
             </div>
         </div>
     </div>
-
-    <div class="slides">
-        <div class="slide-content">
-            <h6 class="slide-head6">
-                Welcome, to i_water
-            </h6>
-            <h1 class="slide-head1">
-                WATER SERVICES<br> NEAR YOU
-            </h1>
-            <p class="slide-des">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Velit unde nam optio nisi sequi quo ullam minima non voluptatibus magnam ea dolorum <br> doloremque nostrum laboriosam, eos rem quisquam suscipit animi?
-            </p>
-
-            <button class="btn btn-primary" >shop now</button>
-        </div>
-        <div class="slideshow-container">
-            <div class="mySlide fade">
-                <img id="img" src="../Assets/imgOne.png" style="width: 100%;">
-            </div>
-
-            <div class="mySlide fade">
-                <img id="img" src="../Assets/imgTwo.png" style="width: 100%;">
-            </div>
-
-            <div class="mySlide fade">
-                <img id="img" src="../Assets/imgThree.png" style="width: 100%;">
-            </div>
-            <div style="text-align: center;">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-            </div>
-        </div>
-    </div>
-
-
+    
 
     <script src="../JS/welcome.js"></script>
 </body>
