--- a/Template/welcome.html
+++ b/Template/welcome.html
@@ -70,6 +70,287 @@
             </div>
         </div>
     </div>
+    <div class="showcase">
+        <div class="leftsection">
+         <h1 class="list-title">Shop by Department</h1>
+         <ul>
+            <li><a href="">This Department</a></li>
+            <li><a href="">This Department</a></li>
+            <li><a href="">This Department</a></li>
+            <li><a href="">This Department</a></li>
+            <li><a href="">This Department</a></li>
+            <li><a href="">This Department</a></li>
+            <li><a href="">This Department</a></li>
+            
+         </ul>
+
+        </div>
+        <div class="rightsection">
+            <div class="section-nav">
+                <ul>
+                    <li><a href="#">All Products</a></li>
+                    <li><a href="#">New Arrivals</a></li>
+                    <li><a href="#">Sale</a></li>
+                </ul>
+                <div class="dropdown"></div>
+            </div>
+            <div class="display-area">
+              <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+              </div>
+              <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+              </div>
+              <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class='product-image'src="https://5.imimg.com/data5/IA/TL/MY-33592295/water-bottle-500x500.jpg" alt="" >
+
+                            </div>
+                            <div class="card-footer">
+                                <p class="product-description">500ml drinking water</p>
+                                <div class="product-info">
+                                    <div class="product-price">
+                                        <p>50<span class="price">ksh</span></p>
+
+                                    </div>
+                                    <button class="btn btn-primary">Add to cart</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+
+        </div>
+    </div>
     
 
     <script src="../JS/welcome.js"></script>
