--- a/Template/welcome.html
+++ b/Template/welcome.html
@@ -33,6 +33,11 @@
                 <i class="fa-regular fa-user"></i>
 
             </div>
+            <div class="icons">
+
+                <i class="fa-solid fa-cart-shopping"></i>
+
+            </div>
         </div>
     </div>
 
