--- a/Template/welcome.html
+++ b/Template/welcome.html
@@ -117,7 +117,7 @@
                                         </div>
                                         <button class="btn btn-primary">Add to cart</button>
                                     </div>
-
+                                    font-family: rubik;
                                 </div>
 
                             </div>
@@ -377,6 +377,80 @@
 
         </div>
     </div>
+
+    <div class="testimony">
+        <div class="testimony-title">
+            <p>What our Customer <br> says about Us </p>
+        </div>
+
+        <div class="testimony-content">
+            <div class="card">
+                <div class="info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, dolor unde! Odit, temporibus
+                        tempora accusamus sunt blanditiis voluptate! Omnis, velit.</p>
+                </div>
+
+                <div class="profile">
+                    <img class="profile-img"
+                        src="https://www.dmarge.com/wp-content/uploads/2021/01/dwayne-the-rock-.jpg" alt="">
+                    <p>Mr dude</p>
+                </div>
+
+                <div class="profile-icons">
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, dolor unde! Odit, temporibus
+                        tempora accusamus sunt blanditiis voluptate! Omnis, velit.</p>
+                </div>
+
+                <div class="profile">
+                    <img class="profile-img"
+                        src="https://www.dmarge.com/wp-content/uploads/2021/01/dwayne-the-rock-.jpg" alt="">
+                    <p>Mr dude</p>
+                </div>
+
+                <div class="profile-icons">
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, dolor unde! Odit, temporibus
+                        tempora accusamus sunt blanditiis voluptate! Omnis, velit.</p>
+                </div>
+
+                <div class="profile">
+                    <img class="profile-img"
+                        src="https://www.dmarge.com/wp-content/uploads/2021/01/dwayne-the-rock-.jpg" alt="">
+                    <p>Mr dude</p>
+                </div>
+
+                <div class="profile-icons">
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                    <i class="fa-solid fa-star" style="color: gold;"></i>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+    <br>
 
     <div class="footer">
         <div class="brand">
@@ -419,7 +493,7 @@
             <input type="text" placeholder="enter your email" id="">
         </div>
     </div>
-    
+
     <script src="../JS/welcome.js"></script>
 </body>
 
