--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -174,14 +174,52 @@ ul li a:hover::after{
     cursor: pointer;
 }
 
-.footer{
-  /*   padding-top: 100%; */
-  margin-top: 15px;
-    display: flex;
-    justify-content: space-around;
-}
 #icons{
     display: flex;
     justify-content: space-around;
 }
+.testimony .card{
+    width: 300px;
+    height: 250px;
 
+}
+.row{
+    display: flex;
+}
+
+.testimony{
+    text-align: center;
+    margin-top: 30px;
+    height: 70vh;
+    background-color: rgb(248, 247, 247);
+}
+.testimony-content{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+.profile-img{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+.profile{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+.profile-icons{
+    margin-top: 40px;
+}
+
+.footer{
+    display: flex;
+    justify-content: space-around;
+    background-color: rgb(248, 247, 247);
+}
+.testimony-title{
+    font-family: rubik;
+    font-weight: bolder;
+    font-size:26;
+}
